# organ

./: .gitignore  Cargo.toml  create_image.sh  first_start.service  first_start.sh  manual.md  mkinitcpio.conf  mkosi.build  mkosi.conf  mkosi.postinst.chroot  organ.service  pipewire.conf  readme.md
3d_printed_parts/3mf/pedalboard/: 0x_pedal back left left cover.3mf  0x_pedal back left middle cover.3mf  0x_pedal back middle right cover.3mf  0x_pedal back right left cover.3mf  0x_pedal back right right cover.3mf  1x_pedal front left left.3mf  1x_pedal front left middle.3mf  1x_pedal front left right.3mf  1x_pedal front right left.3mf  1x_pedal front right right.3mf  8x_front_back_connector.3mf  s_1x_pedal back left left.3mf  (+4 more)
3d_printed_parts/step/: Black key A#1.step  Black key A#2.step  Black key C#1.step  Black key C#2.step  Black key C#3.step  Black key D#1.step  Black key D#2.step  Black key D#3.step  Black key F#1.step  Black key F#2.step  Black key G#1.step  Black key G#2.step  DIN clip.step  Front Back Connector.step  PSU mount.step  Pedal Back black.step  Pedal Back white.step  Pedal Front black.step  Pedal Front white.step  Power switch.step  Register Keyboard plate.step  audio interface mount back.step  audio interface mount front.step  din rail extension.step  keyboard stand adapter.step  mainboard_mount.step  pedal front back frame.step  setter left.step  setter right.step  standoff_closed.step  standoff_hole.step  standoff_psu.step
compiled_firmware/: pedal_lower.uf2  pedal_upper.uf2  registers.uf2  setter.uf2
mkosi.extra/etc/: fstab
mkosi.repart/: 10-root.conf  20-var.conf
src/: lib.rs  main.rs  player.rs  resampler.rs  sampler.rs
(+36 files in other folders)
