[package]
name = "organ"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
alsa = {git="https://github.com/diwic/alsa-rs.git"}
bitmaps = {git="https://github.com/Funestia/bitmaps.git"}
cpal = { version = "0.16.0", features = ["jack"] }
dasp_sample = "0.11.0"
futures = { version = "0.3.31", features = ["executor"] }
hidapi = "2.6.3"
hound = {git="https://github.com/Funestia/hound.git"}
itertools = "0.14.0"
jack = "0.13.3"
oneshot = "0.1.11"
pipewire = "0.9.2"
riff = "2.0.0"
rubato = "0.16.2"
scheduled_channel = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
#tokio = { version = "1.48.0", features = ["rt", "time", "sync", "macros"] }
#tokio-stream = "0.1.17"
toml = "0.9.8"
