[package]
name = "organ"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[profile.release]
opt-level = 3
lto = "fat"
strip = true

[dependencies]
alsa = "0.11.0"
bitmaps = {git="https://github.com/Funestia/bitmaps.git"}
cpal = { version = "0.18.1", features = ["jack"] }
dasp_sample = "0.11.0"
futures = { version = "0.3.31", features = ["executor"] }
hidapi = "2.6.3"
hound = {git="https://github.com/Funestia/hound.git"}
itertools = "0.15.0"
jack = "0.13.3"
libc = "0.2.186"
oneshot = {version = "0.2.1", features = ["std"]}
pipewire = "0.10.0"
preempt-rt = "0.4.4"
rayon = "1.12.0"
riff = "2.0.0"
rubato = "3.0.0"
scheduled_channel = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
#tokio = { version = "1.48.0", features = ["rt", "time", "sync", "macros"] }
#tokio-stream = "0.1.17"
toml = "1.1.2"
